--- a/package.json
+++ b/package.json
@@ -33,31 +33,31 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/debug": "^4.1.5",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.13",
-    "@types/sinon": "^9.0.4",
+    "@types/chai": "4.2.11",
+    "@types/debug": "4.1.5",
+    "@types/mocha": "7.0.2",
+    "@types/node": "14.0.13",
+    "@types/sinon": "9.0.4",
     "@types/typescript": "2.0.0",
     "aws-sdk": "2.699.0",
-    "chai": "^4.2.0",
-    "codeclimate-test-reporter": "^0.5.1",
-    "eslint": "^7.2.0",
-    "eslint-config-iplayer-ts": "^2.0.0",
-    "mocha": "^8.0.1",
-    "nyc": "^15.1.0",
-    "p-event": "^4.2.0",
-    "sinon": "^9.0.2",
-    "ts-node": "^8.10.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-microsoft-contrib": "^6.2.0",
+    "chai": "4.2.0",
+    "codeclimate-test-reporter": "0.5.1",
+    "eslint": "7.2.0",
+    "eslint-config-iplayer-ts": "2.0.0",
+    "mocha": "8.0.1",
+    "nyc": "15.1.0",
+    "p-event": "4.2.0",
+    "sinon": "9.0.2",
+    "ts-node": "8.10.2",
+    "tslint-config-airbnb": "5.11.2",
+    "tslint-microsoft-contrib": "6.2.0",
     "typescript": "3.9.5"
   },
   "dependencies": {
-    "debug": "^4.1.1"
+    "debug": "4.1.1"
   },
   "peerDependencies": {
-    "aws-sdk": "^2.699.0"
+    "aws-sdk": "2.699.0"
   },
   "nyc": {
     "include": [
